# libsignal-service-rs

./: .gitignore  .travis.yml  AGENTS.md  Cargo.toml  GV2-WRITE-PROTOCOL.md  README.md  aliases.js  all.html  constant.GROUP_LEAVE_FLAG.html  constant.GROUP_UPDATE_FLAG.html  crates.js  help.html  index.html  rustfmt.toml  search-index.js  settings.html  source-files.js  src-files.js  state.json  struct.AccountManager.html  struct.ServiceAddress.html  struct.TrustStore.html
aes/: all.html  index.html  struct.Aes128.html  struct.Aes192.html  struct.Aes256.html
aes_ctr/: all.html  index.html  sidebar-items.js  type.Aes128Ctr.html  type.Aes192Ctr.html  type.Aes256Ctr.html
aes_soft/: all.html  index.html  struct.Aes128.html  struct.Aes192.html  struct.Aes256.html
attachment_cipher/: enum.AttachmentCipherError.html  fn.decrypt_in_place.html
backtrace/: all.html  enum.BytesOrWideString.html  fn.resolve_frame_unsynchronized.html  fn.resolve_unsynchronized.html  index.html  struct.Backtrace.html  struct.BacktraceFrame.html  struct.BacktraceSymbol.html  struct.Frame.html  struct.Symbol.html  struct.SymbolName.html
backtrace_sys/: enum.backtrace_state.html  fn.backtrace_create_state.html  fn.backtrace_pcinfo.html  fn.backtrace_syminfo.html  index.html  type.backtrace_error_callback.html  type.backtrace_full_callback.html  type.backtrace_syminfo_callback.html
block_buffer/: struct.BlockBuffer.html
block_cipher_trait/: all.html  index.html  struct.InvalidKeyLength.html  trait.BlockCipher.html
block_modes/: all.html  index.html  sidebar-items.js  struct.BlockModeError.html  struct.Cbc.html  struct.Ecb.html  struct.InvalidKeyIvLength.html  struct.Pcbc.html  trait.BlockMode.html
block_padding/: enum.AnsiX923.html  enum.Iso7816.html  enum.Pkcs7.html  enum.ZeroPadding.html  struct.PadError.html  struct.UnpadError.html  trait.Padding.html
byteorder/: all.html  enum.BigEndian.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html
cipher/: index.html  struct.ServiceCipher.html
configuration/: enum.SignalServers.html  struct.Credentials.html  struct.ServiceConfiguration.html
content/: enum.AttachmentPointerFlags.html  enum.ContentBody.html  enum.DataMessageFlags.html  enum.GroupType.html  sidebar-items.js  struct.AttachmentPointer.html  struct.CallMessage.html  struct.Content.html  struct.DataMessage.html  struct.GroupContext.html  struct.Metadata.html  struct.Reaction.html  struct.ReceiptMessage.html  struct.SyncMessage.html  struct.TypingMessage.html
crypto_mac/: all.html  index.html  struct.InvalidKeyLength.html  struct.MacError.html  struct.MacResult.html  trait.Mac.html
ctr/: all.html  index.html  sidebar-items.js  struct.Ctr128.html
digest/: index.html  macro.impl_write.html  struct.InvalidOutputSize.html  trait.DynDigest.html  trait.VariableOutput.html  trait.XofReader.html
envelope/: struct.Envelope.html  struct.EnvelopeEntity.html
examples/: key_transparency.rs  storage.rs  usernames.rs
failure/: struct.Backtrace.html  struct.Causes.html  struct.Compat.html  struct.Context.html  struct.Error.html  struct.SyncFailure.html  trait.Fail.html
fake_simd/: struct.u32x4.html  struct.u64x2.html
generic_array/: struct.GenericArray.html
hmac/: all.html  index.html  struct.Hmac.html  trait.Mac.html
libc/: enum.c_void.html  struct.Dl_info.html  struct.Elf32_Chdr.html  struct.Elf32_Ehdr.html  struct.Elf32_Phdr.html  struct.Elf32_Shdr.html  struct.Elf32_Sym.html  struct.Elf64_Chdr.html  struct.Elf64_Ehdr.html  struct.Elf64_Phdr.html  struct.Elf64_Shdr.html  struct.Elf64_Sym.html  struct.__exit_status.html  struct.__timeval.html  struct._libc_fpstate.html  struct._libc_fpxreg.html  struct._libc_xmmreg.html  struct.addrinfo.html  struct.af_alg_iv.html  struct.aiocb.html  struct.arpd_request.html  struct.arphdr.html  struct.arpreq.html  struct.arpreq_old.html  struct.cmsghdr.html  struct.cpu_set_t.html  struct.dirent.html  struct.dirent64.html  struct.dl_phdr_info.html  struct.dqblk.html  struct.epoll_event.html  struct.fd_set.html  struct.ff_condition_effect.html  struct.ff_constant_effect.html  struct.ff_effect.html  struct.ff_envelope.html  struct.ff_periodic_effect.html  struct.ff_ramp_effect.html  struct.ff_replay.html  struct.ff_rumble_effect.html  (+105 more)
libsignal-service/: .gitignore  Cargo.toml  build.rs
libsignal-service-actix/: Cargo.toml
libsignal-service-actix/examples/: link.rs  registering.rs
libsignal-service-actix/src/: lib.rs  provisioning.rs  push_service.rs  websocket.rs
libsignal-service-hyper/: Cargo.toml
libsignal-service-hyper/examples/: registering.rs
libsignal-service-hyper/src/: lib.rs  provisioning.rs  push_service.rs  websocket.rs
libsignal-service/examples/: registering.rs  storage.rs
libsignal-service/protobuf/: DecryptedGroups.blah  DecryptedGroups.proto  Groups.proto  SignalService.proto  update-protos.sh
libsignal-service/src/: account_manager.rs  attachment_cipher.rs  cipher.rs  configuration.rs  content.rs  digeststream.rs  envelope.rs  lib.rs  master_key.rs  messagepipe.rs  models.rs  pre_keys.rs  profile_cipher.rs  profile_name.rs  profile_service.rs  proto.rs  provisioning.rs  push_service.rs  receiver.rs  registration.rs  sealed_session_cipher.rs  sender.rs  service_address.rs  session_store.rs  timestamp.rs  unidentified_access.rs  utils.rs  websocket.rs
libsignal-service/src/content/: data_message.rs  story_message.rs
libsignal-service/src/groups_v2/: manager.rs  mod.rs  model.rs  operations.rs  state.rs  utils.rs
libsignal-service/src/gv2/: api.rs  mod.rs  models.rs  operations.rs
libsignal-service/src/provisioning/: cipher.rs  manager.rs  mod.rs  pipe.rs
libsignal-service/src/websocket/: attachment_service.rs  sender.rs
libsignal_protocol/: all.html  enum.CiphertextMessage.html  enum.CiphertextMessageType.html  enum.ContentHint.html  enum.Direction.html  enum.FingerprintError.html  enum.IdentityChange.html  enum.InternalError.html  enum.ServiceId.html  enum.ServiceIdKind.html  enum.UsePQRatchet.html  fn.calculate_signature.html  fn.create_hkdf.html  fn.create_sender_key_distribution_message.html  (+98 more)
(+20831 files in other folders)
