[package]
name = "libsignal-service"
version = "0.1.0"
authors = ["Ruben De Smet <ruben.de.smet@rubdos.be>", "Gabriel Féron <g@leirbag.net>"]
edition = "2021"
license = "AGPL-3.0-only"
readme = "README.md"

[dependencies]
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag = "v0.87.1" }
libsignal-core = { git = "https://github.com/signalapp/libsignal", tag = "v0.87.1" }
signal-crypto = { git = "https://github.com/signalapp/libsignal", tag = "v0.87.1" }
zkgroup = { git = "https://github.com/signalapp/libsignal", tag = "v0.87.1" }
usernames = { git = "https://github.com/signalapp/libsignal", tag = "v0.87.1" }

aes = "0.8"
aes-gcm = "0.10"
cbc = "0.1"
ctr = "0.9"
async-trait = "0.1"
base64 = "0.22"
bincode = "1.3"
bytes = "1"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
derive_more = { version = "2.1", features = ["debug"] }
futures = "0.3"
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
phonenumber = "0.3"
prost = "0.13"
rand = "0.9"
rand_core_06 = { version = "0.6", package = "rand_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
sha2 = "0.10"
thiserror = "2.0"
url = { version = "2.1", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }

# http
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls-manual-roots", "stream"] }
reqwest-websocket = { version = "0.4.2", features = ["json"] }

tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2"

tokio = { version = "1.0", features = ["macros"] }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["macros", "rt"] }

[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }
