[package]
name = "libsignal-service-hyper"
version = "0.1.0"
authors = ["Gabriel Féron <g@leirbag.net>"]
edition = "2018"

[dependencies]
libsignal-service = { path = "../libsignal-service" }

async-trait = "0.1"
base64 = "0.13"
bytes = "1.0"
futures = "0.3"
log = "0.4"
mpart-async = "0.5"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
url = "2.1"

hyper = { version = "0.14", features = [ "client", "stream" ] }
hyper-rustls = "0.22"
hyper-timeout = "0.4"
headers = "0.3"

# for websocket support
async-tungstenite = { version = "0.15", features = [ "tokio-rustls-native-certs" ] }

tokio = { version = "1.0", features = [ "macros" ] }
tokio-rustls = "0.22"

[dev-dependencies]
env_logger = "0.9"
image = { version = "0.23", default-features = false, features = [ "png" ] }
opener = "0.5"
qrcode = "0.12"
rand = "0.7"
structopt = "0.3"
tokio = { version = "1.0", features = [ "rt-multi-thread" ]}

[features]
unsend-futures = ["libsignal-service/unsend-futures"]
