[package]
name = "libsignal-service-hyper"
version = "0.1.0"
authors = ["Gabriel Féron <g@leirbag.net>"]
edition = "2018"
license = "AGPL-3.0"
rust-version = "1.70.0"

[dependencies]
libsignal-service = { path = "../libsignal-service" }

async-trait = "0.1"
bytes = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-futures = "0.2"
mpart-async = "0.6"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
url = "2.1"

# hyper rustls 0.25 is not compatible with hyper 1 yet
# https://github.com/rustls/hyper-rustls/issues/234
hyper = { version = "0.14", features = ["client", "stream"] }
hyper-rustls = { version = "0.25", features=["http1", "http2"] }
hyper-timeout = "0.4"
headers = "0.3"

# for websocket support
async-tungstenite = { version = "0.24", features = ["tokio-rustls-native-certs"] }

tokio = { version = "1.0", features = ["macros"] }
tokio-rustls = "0.25"

rustls-pemfile = "2.0"

[dev-dependencies]
chrono = "0.4"
rand = "0.8"
tokio = { version = "1.0", features = ["rt-multi-thread"] }

[features]
unsend-futures = ["libsignal-service/unsend-futures"]
