[package]
name = "libsignal-service"
version = "0.1.0"
authors = ["Ruben De Smet <ruben.de.smet@rubdos.be>", "Gabriel Féron <g@leirbag.net>", "Michael Bryan <michaelfbryan@gmail.com>", "Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
readme = "../README.md"

[dependencies]
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag = "v0.37.0" }
zkgroup = { git = "https://github.com/signalapp/libsignal", tag = "v0.37.0" }

aes = { version = "0.7", features = ["ctr"] }
aes-gcm = "0.9"
async-trait = "0.1"
base64 = "0.13"
bincode = "1.3"
block-modes = "0.8"
bytes = "1"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
derivative = "2.2"
futures = "0.3"
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
log = "0.4"
phonenumber = "0.3"
prost = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
sha2 = "0.10"
thiserror = "1.0"
url = { version = "2.1", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }

[build-dependencies]
prost-build = "0.10"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["macros", "rt"] }

rustls = "0.21"

[features]
unsend-futures = []
